--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^16.11.2",
-    "@types/react": "^17.0.31",
-    "bootstrap": "^5.1.3",
-    "next": "11.1.2",
-    "next-auth": "^3.29.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typescript": "^4.4.4"
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
+    "bootstrap": "^5.3.3",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "eslint": "7.32.0",
