--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "bootstrap": "^5.3.3",
+    "googleapis": "^137.1.0",
+    "net": "^1.0.2",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
